# meal-planner

./: README.md  VALIDATION.md  alembic.ini  pyproject.toml
specs/001-recipe-nutrition-core/: TESTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-recipe-nutrition-core/checklists/: requirements.md
specs/001-recipe-nutrition-core/contracts/: logging-api.md  planning-api.md  profile-api.md  recipe-api.md
src/: __init__.py
src/meal_planner/: __init__.py  config.py  main.py
src/meal_planner/api/: __init__.py  middleware.py
src/meal_planner/api/schemas/: __init__.py  common.py  food.py  (+2 more)
src/meal_planner/domain/: __init__.py
src/meal_planner/infra/: __init__.py
src/meal_planner/repository/: __init__.py
src/meal_planner/services/: __init__.py  food_service.py  interfaces.py  nutrition_calculator.py  profile_service.py  recipe_service.py  unit_conversion.py
src/meal_planner/web/: __init__.py
tests/: TEST_REPORT.md  __init__.py
tests/api/: conftest.py  test_error_handling.py  test_food_endpoints.py  test_profile_endpoints.py  test_recipe_endpoints.py
tests/integration/: __init__.py  conftest.py  test_profile_service.py  test_recipe_service.py
tests/unit/: __init__.py
tests/unit/repository/: test_session.py  test_session_dependency.py
tests/unit/schemas/: test_food_schemas.py  test_profile_schemas.py  test_recipe_schemas.py
tests/unit/services/: test_food_service_unit.py  test_fuzzy_search.py  test_nutrition_calculator.py  test_profile_service_unit.py  test_recipe_service_unit.py  test_unit_conversion.py
(+32 files in other folders)
