[project]
name = "meal-planner"
version = "0.1.0"
description = "MPP — personal recipe home and nutrition-aware meal planner"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Templating + HTMX progressive enhancement
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # form parsing

    # Data validation and config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",           # async SQLite driver

    # Search
    "rapidfuzz>=3.9",            # fuzzy search for ingredient library

    # Utilities
    "python-dateutil>=2.9",
    "httpx>=0.27",               # async HTTP client (for future OCR/AI calls)
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",               # TestClient for FastAPI
    "pytest-cov>=5.0",
    "ruff>=0.4",                 # linter + formatter
    "mypy>=1.10",
]